[metadata]
name = raygun
version = attr: raygun.__version__
author = Jeff Rhoades
author_email = rhoades@g.harvard.edu
; url = 
description = Library for testing and implementing image denoising, enhancement, and segmentation techniques on large, volumetric datasets. Built with Gunpowder, Daisy, PyTorch, and eventually JAX (hopefully).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vision, imaging, enhancement, GAN, neuroscience
license = AGPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    daisy
    funlib.learn.torch
    funlib.math
    gunpowder
    matplotlib
    neuroglancer
    numpy
    Pillow
    scikit-image
    scipy
    tensorboard
    tensorboardX
    torch
    torchvision
    tqdm
    zarr
dependency_links = 
    git+https://github.com/funkelab/funlib.learn.torch#egg=funlib.learn.torch
    git+https://github.com/funkelab/funlib.math#egg=funlib.math
    git+https://github.com/rhoadesScholar/gunpowder@raygun#egg=gunpowder

[options.packages.find]
where=src

; [options.entry_points]
; console_scripts = 
;     my-example-utility = example.example_module:main

; [options.extras_require]
; notebook = jupyter>=1.0.0, matplotlib
; dev = 
;     black==22.1.0
;     flake8==4.0.1

[options.package_data]
example = *.json
* = README.md