[metadata]
name = raygun
version = attr: raygun.__version__
author = Jeff Rhoades
author_email = rhoades@g.harvard.edu
; url = 
description = Library for testing and implementing image denoising, enhancement, and segmentation techniques on large, volumetric datasets. Built with Gunpowder, Daisy, PyTorch, and eventually JAX (hopefully).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vision, imaging, enhancement, GAN, neuroscience
license = AGPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    daisy @ git+https://github.com/funkelab/daisy
    funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch
    funlib.math @ git+https://github.com/funkelab/funlib.math
    gunpowder @ git+https://github.com/rhoadesScholar/gunpowder@raygun
    matplotlib
    neuroglancer
    numpy
    Pillow
    scikit-image
    scipy
    tensorboard
    tensorboardX
    torch
    torchvision
    tqdm
    zarr
    jsmin
    ipykernel
    jupyter
    ipywidgets

[options.packages.find]
where=src

; [options.entry_points]
; console_scripts = 
;     my-example-utility = example.example_module:main

; [options.extras_require]
; notebook = jupyter>=1.0.0, matplotlib
; dev = 
;     black==22.1.0
;     flake8==4.0.1

[options.package_data]
example = *.json
* = README.md

[options.entry_points]
console_scripts = 
    raygun-train = raygun.train:train
    raygun-train-batch = raygun.train:batch_train
    raygun-train-cluster = raygun.train:cluster_train
