[metadata]
name = raygun
version = attr: raygun.__version__
author = Jeff Rhoades
author_email = rhoades@g.harvard.edu
url = https://github.com/htem/raygun
description = Library for testing and implementing image denoising, enhancement, and segmentation techniques on large, volumetric datasets. Built with Gunpowder, Daisy, PyTorch, and eventually JAX (hopefully).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vision, imaging, enhancement, GAN, neuroscience
license = AGPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    Cython
    daisy @ git+https://github.com/funkelab/daisy
    funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch
    funlib.math @ git+https://github.com/funkelab/funlib.math
    funlib.show.neuroglancer @ git+https://github.com/funkelab/funlib.show.neuroglancer
    gunpowder @ git+https://github.com/rhoadesScholar/gunpowder@raygun
    lsd @ git+https://github.com/funkelab/lsd@restructure
    waterz @ git+https://github.com/funkey/waterz
    matplotlib
    neuroglancer
    numpy
    Pillow
    scikit-image
    scipy
    tensorboard
    tensorboardX
    torch
    torchvision
    tqdm
    zarr
    jsmin
    ipykernel
    jupyter
    ipywidgets
    webknossos
    funlib.evaluate @ git+https://github.com/funkelab/funlib.evaluate
    pytest

[options.packages.find]
where=src

; [options.extras_require]
; notebook = jupyter>=1.0.0, matplotlib
; dev = 
;     black==22.1.0
;     flake8==4.0.1

[options.package_data]
example = *.json
* = README.md

[options.entry_points]
console_scripts = 
    raygun-train = raygun.train:train
    raygun-train-batch = raygun.train:batch_train
    raygun-train-cluster = raygun.train:cluster_train
    raygun-inspect = raygun.evaluation.inspect_logs:inspect_logs
    raygun-predict = raygun.predict:predict
    raygun-segment = raygun.segment:segment
    raygun-copy-template = raygun.copy_template:copy_template
    raygun-run-validation = raygun.evaluation.validate_affinities:run_validation
    raygun-validate-affinities = raygun.evaluation.validate_affinities:validate_affinities
    raygun-validate-segmentation = raygun.evaluation.validate_affinities:validate_segmentation
    raygun-images-compare = raygun.evaluation.image_compare:images_compare
